--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
                 <button class="nav-btn">Subscribe <img src="" alt=""></button>
                  <div class="hamburger-menu">
-                    <img src="/assets/hamburger-menu.png" alt="">
+                    <img src="./assets/hamburger-menu.png" alt="">
                  </div>
             </div>
         </nav>
@@ -35,7 +35,7 @@
             <div class="banner-content">
                 <div class="podcast-wrapper">
                 <div class="podcast-circle">
-                    <img src="/assets/microphone.png" alt="Mic">
+                    <img src="./assets/microphone.png" alt="Mic">
                 </div>
                 <span class="badge-new">NEW</span>
                 </div>
@@ -46,8 +46,8 @@
                 </p>
 
                 <div class="cta-buttons">
-                    <button class="cta-1"><img src="/assets/spotify.png" alt="">Listen on Spotify</button>
-                    <button class="cta-2"><img src="/assets/message.png" alt="">Subscribe</button>
+                    <button class="cta-1"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
+                    <button class="cta-2"><img src="./assets/message.png" alt="">Subscribe</button>
                 </div>
             </div>
             </section>          
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="why-card right-top">
-                    <img src="/assets/device.png" alt="">
+                    <img src="./assets/device.png" alt="">
                     <h3>Mobile Friendly</h3>
                     <p>
                         Listen on the go with seamless mobile experience and offline downloads.
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="why-card right-bottom">
-                    <img src="/assets/location.png" alt="">
+                    <img src="./assets/location.png" alt="">
                     <h3>Global Community</h3>
                     <p>
                         Connect with tech enthusiasts from over 120 countries worldwide.
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="why-card wide">
-                    <img src="icon-interview.png" alt="">
+                    <img src="./assets/device.png" alt="">
                     <h3>Exclusive Interviews</h3>
                     <p>
                         Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="why-card small">
-                    <img src="/assets/resource.png" alt="">
+                    <img src="./assets/resource.png" alt="">
                     <h3>Rich Resources</h3>
                     <p>
                         Access show notes, transcripts, and additional learning materials for every episode.
@@ -187,16 +187,16 @@
       <h2 class="section-title">Meet The Host</h2>
 
       <div class="host-card">
-        <div><img src="/assets/host.png" alt=""></div>
+        <div><img src="./assets/host.png" alt=""></div>
         <div class="host-contend">
           <h3>Alex Kumar</h3>
           <p>
             Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
           </p>
-          <img src="/assets/linkedin.png" alt="">
-          <img src="/assets/x.png" alt="">
-          <img src="/assets/instagram.png" alt="">
-          <img src="/assets/youtube.png" alt="">
+          <img src="./assets/linkedin.png" alt="">
+          <img src="./assets/x.png" alt="">
+          <img src="./assets/instagram.png" alt="">
+          <img src="./assets/youtube.png" alt="">
         </div>
     </div>
     </div>
@@ -208,7 +208,7 @@
      <footer class="footer">
   <div class="footer-inner">
     <div class="footer-wave left">
-      <img src="images/wave-left.png" alt="">
+      <img src="./assets/footer-bg.png" alt="">
     </div>
     <div class="footer-center">
       <h2 class="footer-logo">
@@ -224,10 +224,10 @@
 
 
     <div class="footer-icons">
-        <img src="/assets/spotify.png" alt="">
-        <img src="/assets/apple-podcast.png" alt="">
-        <img src="/assets/youtube-podcast.png" alt="">
-        <img src="/assets/twitter.png" alt="">
+        <img src="./assets/spotify.png" alt="">
+        <img src="./assets/apple-podcast.png" alt="">
+        <img src="./assets/youtube-podcast.png" alt="">
+        <img src="./assets/twitter.png" alt="">
     </div>
 
     <p class="footer-copy">
